[package]
name = "highpymath"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "High Quality Rust Python Module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "highpymath"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
